--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="../fonts/font-awesome/css/font-awesome.min.css">
 
     <!-- CSS -->
-    <link href="stylesheets/bootstrap.css" rel="stylesheet" />
+    <link href="../stylesheets/bootstrap.css" rel="stylesheet" />
 
     <!-- JAVASCRIPT -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
-    <script src="/javascripts/bootstrap.js"></script>
+    <script src="../javascripts/bootstrap.js"></script>
 
     <!-- FAVICON -->
 
