--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Spirax" rel="stylesheet"> 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../fonts/font-awesome/css/font-awesome.min.css">
+    <!-- <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
 
     <!-- CSS -->
-    <link href="../stylesheets/bootstrap.css" rel="stylesheet" />
+    <link href="stylesheets/bootstrap.css" rel="stylesheet">
 
     <!-- JAVASCRIPT -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
-    <script src="../javascripts/bootstrap.js"></script>
+    <script src="javascripts/bootstrap.js"></script>
 
     <!-- FAVICON -->
 
@@ -38,7 +38,7 @@
     </nav>
 
     <!-- JUMBOTRON -->
-    <div class="jumbotron" style="background: url('images/jumbotron/jumbotron-1.jpg') center center fixed no-repeat; background-size: cover; padding-bottom: 0.5rem; padding-top: 2.5rem">
+    <div class="jumbotron" style="background: url('images/jumbotron/jumbotron-1.JPG') center center fixed no-repeat; background-size: cover; padding-bottom: 0.5rem; padding-top: 2.5rem">
       <div class="container">
         <div class="row pb-2">
           <div class="col-lg-12 py-3 text-right">
