--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- CSS -->
     <link href="stylesheets/bootstrap.css" rel="stylesheet">
+    <link href="stylesheets/custom.css" rel="stylesheet">
 
     <!-- JAVASCRIPT -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
@@ -42,7 +43,6 @@
       <div class="container">
         <div class="row pb-2">
           <div class="col-lg-12 py-3 text-right">
-           <img src="images/logos/logo.svg" width="60%">
             <h1 class="pt-3" style="margin-bottom: 0.2em !important;">Everything deserves a home</h1>
           </div>
         </div>
