--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     </div>
 
     <!-- TEAL AREA -->
-    <section class="bg-primary">
+    <!-- <section class="bg-primary">
       <div class="container py-5">
         <div class="row">
         </div>
       </div>
     </section>
-
+ -->
   </body>
 </html>
