--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Spirax" rel="stylesheet"> 
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400" rel="stylesheet"> 
     <!-- <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
 
     <!-- CSS -->
