--- a/index.html
+++ b/index.html
@@ -38,21 +38,15 @@
       </div>
     </nav>
 
-    <!-- JUMBOTRON -->
-    <div class="jumbotron" style="background: url('images/jumbotron/jumbotron-1.JPG') center center fixed no-repeat; background-size: cover; padding-bottom: 0.5rem; padding-top: 2.5rem">
-      <div class="container">
-        <div class="row pb-2">
-          <div class="col-lg-12 py-3 text-right">
-            <h1 class="pt-3" style="margin-bottom: 0.2em !important;">Everything deserves a home</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- TEAL AREA -->
-    <!-- <section class="bg-primary">
+    <!-- MAIN -->
+    <section>
       <div class="container py-5">
         <div class="row">
+          <div class="col-8">
+          <h1>Who</h1>
+          </div>
+          <div class="col-4">
+          <h1 class="text-right">Updates</h1>
         </div>
       </div>
     </section>
