--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
         <div class="row">
           <div class="col-8">
           <h1>Who</h1>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="card">
+                <img class="card-img-top" src="images/oberyna/oberyna-with-trotsky-1.jpg">
+                <div class="card-block">
+                  <h4 class="card-title">Oberyna</h4>
+                </div>
+              </div>            
+            </div>
+          </div>
           </div>
           <div class="col-4">
           <h1 class="text-right">Updates</h1>
