--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section>
       <div class="container py-5">
         <div class="row">
-          <div class="col-8">
+          <div class="col-sm-8">
           <h1>Who</h1>
           <div class="row">
             <div class="col-sm-4">
@@ -55,7 +55,7 @@
             </div>
           </div>
           </div>
-          <div class="col-4">
+          <div class="col-sm-4">
           <h1 class="text-right">Updates</h1>
         </div>
       </div>
