--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#wtaag-nav" aria-controls="wtaag-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><h3>where the abandoned animals go</h3></a>
+      <a class="navbar-brand" href="index.html"><h3 class="logo">where the abandoned animals go</h3></a>
 
       <div class="collapse navbar-collapse" id="wtaag-nav">
         <ul class="navbar-nav ml-auto text-uppercase">
@@ -53,6 +53,14 @@
                 </div>
               </div>            
             </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <img class="card-img-top" src="images/cats/oberyna/oberyna-with-trotsky-1.jpg">
+                <div class="card-block">
+                  <h4 class="card-title">Oberyna</h4>
+                </div>
+              </div>            
+            </div>
           </div>
           </div>
           <div class="col-sm-4">
@@ -60,5 +68,20 @@
         </div>
       </div>
     </section>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-sm-6">
+            <h3 class="logo">where the abandoned animals go</h3>
+          </div>
+          <div class="col-sm-6">
+            <p><a href="https://twitter.com/jaybaeta">@jaybaeta</a> <br>
+            <a href="https://twitter.com/LellyBaeta">@LellyBaeta</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
