--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="card">
-                <img class="card-img-top" src="images/cats/oberyna/oberyna-with-trotsky-1.jpg">
+                <img class="card-img-top" src="images/cats/tardi/tardi-2-months.jpg">
                 <div class="card-block">
-                  <h4 class="card-title">Oberyna</h4>
+                  <h4 class="card-title">Tardi</h4>
                 </div>
               </div>            
             </div>
