--- a/index.html
+++ b/index.html
@@ -42,28 +42,36 @@
     <section>
       <div class="container py-5">
         <div class="row">
-          <div class="col-sm-8">
+          <div class="col-md-8">
           <h1>Who</h1>
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="card">
-                <img class="card-img-top" src="images/cats/tardi/tardi-2-months.jpg">
-                <div class="card-block">
-                  <h4 class="card-title">Tardi</h4>
-                </div>
-              </div>            
-            </div>
-            <div class="col-sm-4">
-              <div class="card">
-                <img class="card-img-top" src="images/cats/oberyna/oberyna-with-trotsky-1.jpg">
-                <div class="card-block">
-                  <h4 class="card-title">Oberyna</h4>
-                </div>
-              </div>            
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="card">
+                  <img class="card-img-top" src="images/cats/tardi/tardi-2-months.jpg">
+                  <div class="card-block">
+                    <h4 class="card-title">Tardi</h4>
+                  </div>
+                </div>            
+              </div>
+              <div class="col-md-4">
+                <div class="card">
+                  <img class="card-img-top" src="images/cats/oberyna/oberyna.jpg">
+                  <div class="card-block">
+                    <h4 class="card-title">Oberyna</h4>
+                  </div>
+                </div>            
+              </div>
+              <div class="col-md-4">
+                <div class="card">
+                  <img class="card-img-top" src="images/cats/aramis/aramis.jpg">
+                  <div class="card-block">
+                    <h4 class="card-title">Aramis</h4>
+                  </div>
+                </div>            
+              </div>
             </div>
           </div>
-          </div>
-          <div class="col-sm-4">
+          <div class="col-lg-4">
           <h1 class="text-right">Updates</h1>
         </div>
       </div>
