--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section>
       <div class="container py-5">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-lg-8">
           <h1>Who</h1>
             <div class="row">
               <div class="col-lg-4">
