--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="col-lg-8">
           <h1>Who</h1>
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-md-4">
                 <div class="card">
                   <img class="card-img-top" src="images/cats/tardi/tardi-2-months.jpg">
                   <div class="card-block">
