--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1>Who</h1>
             <div class="row">
               <div class="col-md-4">
-                <div class="card">
+                <div class="card mb-4">
                   <img class="card-img-top" src="images/cats/tardi/tardi-2-months.jpg">
                   <div class="card-block">
                     <h4 class="card-title">Tardi</h4>
@@ -54,7 +54,7 @@
                 </div>            
               </div>
               <div class="col-md-4">
-                <div class="card">
+                <div class="card mb-4">
                   <img class="card-img-top" src="images/cats/oberyna/oberyna.jpg">
                   <div class="card-block">
                     <h4 class="card-title">Oberyna</h4>
@@ -62,7 +62,17 @@
                 </div>            
               </div>
               <div class="col-md-4">
-                <div class="card">
+                <div class="card mb-4">
+                  <img class="card-img-top" src="images/cats/trotsky/trotsky.jpg">
+                  <div class="card-block">
+                    <h4 class="card-title">Trotsky</h4>
+                  </div>
+                </div>            
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card mb-4">
                   <img class="card-img-top" src="images/cats/aramis/aramis.jpg">
                   <div class="card-block">
                     <h4 class="card-title">Aramis</h4>
