--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
                   </div>
                 </div>            
               </div>
+              <div class="col-md-4">
+                <div class="card mb-4">
+                  <img class="card-img-top" src="images/cats/cougar/cougar.jpg">
+                  <div class="card-block">
+                    <h4 class="card-title">Cougar</h4>
+                  </div>
+                </div>            
+              </div>
             </div>
           </div>
           <div class="col-lg-4">
