--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4">
+                  <img class="card-img-top" src="images/cats/rocket/rocket.jpg">
+                  <div class="card-block">
+                    <h4 class="card-title">Rocket</h4>
+                  </div>
+                </div>            
+              </div>
+              <div class="col-md-4">
+                <div class="card mb-4">
                   <img class="card-img-top" src="images/cats/aramis/aramis.jpg">
                   <div class="card-block">
                     <h4 class="card-title">Aramis</h4>
@@ -87,6 +95,8 @@
                   </div>
                 </div>            
               </div>
+            </div>
+            <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4">
                   <img class="card-img-top" src="images/cats/cougar/cougar.jpg">
