--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-8">
-          <h1>Who</h1>
             <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4">
@@ -108,7 +107,9 @@
             </div>
           </div>
           <div class="col-lg-4">
-          <h1 class="text-right">Updates</h1>
+            <div class="row">
+              <h2>Updates</h2>
+            </div>
         </div>
       </div>
     </section>
