--- a/index.html
+++ b/index.html
@@ -88,14 +88,22 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4">
+                  <img class="card-img-top" src="images/cats/chiki/chiki.jpg">
+                  <div class="card-block">
+                    <h4 class="card-title">Chiki</h4>
+                  </div>
+                </div>            
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card mb-4">
                   <img class="card-img-top" src="images/cats/foxtrot/foxtrot.jpg">
                   <div class="card-block">
                     <h4 class="card-title">Foxtrot</h4>
                   </div>
                 </div>            
               </div>
-            </div>
-            <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4">
                   <img class="card-img-top" src="images/cats/cougar/cougar.jpg">
