--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
           <div class="col-lg-4">
             <div class="row">
               <h2>Updates</h2>
+              <div class="row">
+                <div class="col-md-4">
+                  <p class="text-muted">16 April 2017</p>
+                </div>
+                <div class="col-md-8">
+                  <p>Gothmog has contracted feline parvovirus.</p>
+                </div>
+              </div>
             </div>
         </div>
       </div>
