update navbar and footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body class="index">
     <!-- NAVBAR -->
-    <nav class="navbar navbar-toggleable-md navbar-light sticky-top">
+    <nav class="navbar navbar-toggleable-md navbar-light">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#wtaag-nav" aria-controls="wtaag-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -142,6 +142,7 @@
     <footer>
       <div class="container py-5">
         <div class="row">
+          <hr class="mx-auto my-3" style="width: 80%;">
           <div class="col-sm-6">
             <h3 class="logo">where the abandoned animals go</h3>
           </div>
