--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="card mb-4">
                   <img class="card-img-top" src="images/cats/chico/chico.jpg">
                   <div class="card-block">
-                    <h4 class="card-title">Cougar</h4>
+                    <h4 class="card-title">Chico</h4>
                   </div>
                 </div>            
               </div>
