--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <p class="text-muted">16 April 2017</p>
                 </div>
                 <div class="col-md-8">
-                  <p>Gothmog has contracted feline parvovirus.</p>
+                  <p>Gothmog has contracted panleukopenia.</p>
                 </div>
               </div>
             </div>
