change card styling

--- a/index.html
+++ b/index.html
@@ -46,51 +46,25 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/tardi/tardi-2-months.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Tardi</h4>
+                  <img class="card-img" src="images/cats/tardi/tardi-2-months.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Tardi</h4>
                   </div>
                 </div>            
               </div>
               <div class="col-md-4">
                 <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/oberyna/oberyna.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Oberyna</h4>
+                  <img class="card-img" src="images/cats/oberyna/oberyna.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Oberyna</h4>
                   </div>
                 </div>            
               </div>
               <div class="col-md-4">
                 <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/trotsky/trotsky.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Trotsky</h4>
-                  </div>
-                </div>            
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-4">
-                <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/rocket/rocket.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Rocket</h4>
-                  </div>
-                </div>            
-              </div>
-              <div class="col-md-4">
-                <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/aramis/aramis.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Aramis</h4>
-                  </div>
-                </div>            
-              </div>
-              <div class="col-md-4">
-                <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/chiki/chiki.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Chiki</h4>
+                  <img class="card-img" src="images/cats/trotsky/trotsky.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Trotsky</h4>
                   </div>
                 </div>            
               </div>
@@ -98,25 +72,51 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/foxtrot/foxtrot.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Foxtrot</h4>
+                  <img class="card-img" src="images/cats/rocket/rocket.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Rocket</h4>
                   </div>
                 </div>            
               </div>
               <div class="col-md-4">
                 <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/chico/chico.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Chico</h4>
+                  <img class="card-img" src="images/cats/aramis/aramis.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Aramis</h4>
                   </div>
                 </div>            
               </div>
               <div class="col-md-4">
                 <div class="card mb-4">
-                  <img class="card-img-top" src="images/cats/cougar/cougar.jpg">
-                  <div class="card-block">
-                    <h4 class="card-title">Cougar</h4>
+                  <img class="card-img" src="images/cats/chiki/chiki.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Chiki</h4>
+                  </div>
+                </div>            
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card mb-4">
+                  <img class="card-img" src="images/cats/foxtrot/foxtrot.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Foxtrot</h4>
+                  </div>
+                </div>            
+              </div>
+              <div class="col-md-4">
+                <div class="card mb-4">
+                  <img class="card-img" src="images/cats/chico/chico.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Chico</h4>
+                  </div>
+                </div>            
+              </div>
+              <div class="col-md-4">
+                <div class="card mb-4">
+                  <img class="card-img" src="images/cats/cougar/cougar.jpg">
+                  <div class="card-img-overlay">
+                    <h4 class="card-title text-white text-center card-overlay-title">Cougar</h4>
                   </div>
                 </div>            
               </div>
