--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
           </div>
           <div class="col-lg-3">
             <div class="row">
-              <h2>Updates</h2>
+              <div class="col-12">
+                <h2>Updates</h2>
+              </div>
             </div>
             <div class="row">
               <div class="col-md-4">
